# tokenboard

./: .env.backup.example  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  build.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/src/: clients.rs  main.rs  pricing.rs  scanner.rs  scheduler.rs  sync.rs  updater.rs
client/src/parsers/: csv.rs  json.rs  jsonl.rs  mod.rs  sqlite.rs
scripts/: backup.sh  copy-to-home-server.sh  deploy-compose.sh  deploy-remote.sh  install.ps1  install.sh  redeploy-prod.sh  restore.sh
server/: .dockerignore  Dockerfile  auth.test.js  badges.test.js  config.test.js  db.js  index.js  leaderboard.test.js  migrate.js  package-lock.json  package.json  stats.test.js  submit.test.js
server/frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
server/frontend/src/: App.vue  app.css
server/lib/: auth.js  config.js  providers.js
server/middleware/: auth.js
server/routes/: auth.js  badges.js  leaderboard.js  stats.js  submit.js
server/scripts/: local-flow-e2e.mjs
