[package]
name = "tokenboard-client"
version = "1.0.5"
edition = "2021"
description = "Desktop client that scans AI coding agent token usage and syncs to tokenboard leaderboard"

[[bin]]
name = "tokenboard"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "6"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
csv = "1"
directories = "5"
semver = "1"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
